--- a/channel page/channelhtml.html
+++ b/channel page/channelhtml.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Channel</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 <div class="create-channel-form">
   <h3>Create a Channel</h3>
   <form>
@@ -12,3 +20,4 @@
 </div>
 <button id="change-bg-color">Change Background Color</button>
 <button id="rename-channel">Rename Channel</button>
+</body>
