--- a/home page/homehtml.html
+++ b/home page/homehtml.html
@@ -13,7 +13,8 @@
                 <li><a href="#">Create Channel</a></li>
                 <li><a href="#">Join Channel</a></li>
                 <li><a href="#">Settings</a></li>
-                <li><a href="channelhtml.html">CHANNEL</a></li>
+                <li><a href="#">CHANNEL</a></li>
+                <li><a href="homepage2.html">HOME</a></li>
             </ul>
         </div>
         <div class="main-content">
