--- a/homehtml.html
+++ b/homehtml.html
@@ -13,6 +13,7 @@
                 <li><a href="#">Create Channel</a></li>
                 <li><a href="#">Join Channel</a></li>
                 <li><a href="#">Settings</a></li>
+                <li><a href="homepage2.html">homepage2</a></li>
             </ul>
         </div>
         <div class="main-content">
