--- a/homehtml.html
+++ b/homehtml.html
@@ -10,7 +10,7 @@
         <div class="sidebar">
             <h1>WORP</h1>
             <ul>
-                <li><a href="#">Create Channel</a></li>
+                <li><a href="channelhtml.html">Create Channel</a></li>
                 <li><a href="#">Join Channel</a></li>
                 <li><a href="#">Settings</a></li>
                 <li><a href="homepage2.html">homepage2</a></li>
