--- a/homepage2.html
+++ b/homepage2.html
@@ -18,6 +18,7 @@
           <li><a href="#">Technology</a></li>
           <li><a href="#">Music</a></li>
           <li><a href="#">Art</a></li>
+          <li><a href="channelhtml.html">channel</a></li>
         </ul>
       </nav>
       <div class="channels">
