--- a/channelhtml.html
+++ b/channelhtml.html
@@ -1,4 +1,15 @@
-<div class="create-channel-form">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Channel</title>
+</head>
+<body>
+  
+</body>
+</html><div class="create-channel-form">
   <h3>Create a Channel</h3>
   <form>
     <label for="channel-name">Channel Name:</label>
