--- a/channelhtml.html
+++ b/channelhtml.html
@@ -8,8 +8,7 @@
 </head>
 <body>
   
-</body>
-</html><div class="create-channel-form">
+<div class="create-channel-form">
   <h3>Create a Channel</h3>
   <form>
     <label for="channel-name">Channel Name:</label>
@@ -23,3 +22,7 @@
 </div>
 <button id="change-bg-color">Change Background Color</button>
 <button id="rename-channel">Rename Channel</button>
+
+</body>
+
+</html>
