--- a/homehtml.html
+++ b/homehtml.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>WORP Home</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="homecss.css">
 </head>
 <body>
     <div class="container">
