--- a/homepage2.html
+++ b/homepage2.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>WORP - Home</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="homepage2.css">
   </head>
   <body>
     <header>
