--- a/channelhtml.html
+++ b/channelhtml.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Channel</title>
-  <link rel="stylesheet" href="homecss.css">
+  <link rel="stylesheet" href="channelcss.css">
 </head>
 <body> 
 <div class="create-channel-form">
@@ -22,5 +22,8 @@
 </div>
 <button id="change-bg-color">Change Background Color</button>
 <button id="rename-channel">Rename Channel</button>
+<div class="home">
+  <a href="homehtml.html" style="color: goldenrod;">HOME</a>
+</div>
 </body>
 </html>
