--- a/loginhtml.html
+++ b/loginhtml.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>WORP Login Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="logincss.css">
 </head>
 <body>
     <div class="container">
@@ -23,6 +23,6 @@
             <button class="login-btn" onclick="login()">Login</button>
         </form>
     </div>
-    <script src="script.js"></script>
+    <script src="loginjavascript.js"></script>
 </body>
 </html>
