--- a/loginhtml.html
+++ b/loginhtml.html
@@ -20,7 +20,8 @@
                     <span class="show-password" onclick="showPassword()">Show</span>
                 </div>
             </div>
-            <button class="login-btn" onclick="login()">Login</button>
+            <a href="homehtml.html"><button class="login-btn">Login</button></a>
+            
         </form>
     </div>
     <script src="loginjavascript.js"></script>
