--- a/loginhtml.html
+++ b/loginhtml.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="logincss.css">
 </head>
 <body>
-    <div class="container">
+    <!--<div class="container">
         <h1>WORP Login</h1>
         <form>
             <div class="form-group">
@@ -23,7 +23,25 @@
             <a href="homehtml.html"><button class="login-btn">Login</button></a>
             
         </form>
-    </div>
+    </div>-->
+    <div class="login-page">
+        <h1>WORP</h1>
+        <div class="form">
+          <form class="register-form">
+            <input type="text" placeholder="name" />
+            <input type="password" placeholder="password" />
+            <input type="text" placeholder="email address"/>
+            <button>create</button>
+            <p class="message">Already registered? <a href="#">Sign In</a></p>
+          </form>
+          <form class="login-form">
+            <input type="text" placeholder="username" />
+            <input type="password" placeholder="password" />
+            <button>login</button>
+            <p class="message">Not registered? <a href="#">Create an account</a></p>
+          </form>
+        </div>
+      </div>
     <script src="loginjavascript.js"></script>
 </body>
 </html>
