--- a/loginhtml.html
+++ b/loginhtml.html
@@ -24,7 +24,8 @@
             
         </form>
     </div>-->
-    <div class="login-page">
+<!--this is different sectionnnnnnn-->
+<!--    <div class="login-page">
         <h1>WORP</h1>
         <div class="form">
           <form class="register-form">
@@ -41,7 +42,45 @@
             <p class="message">Not registered? <a href="#">Create an account</a></p>
           </form>
         </div>
-      </div>
+      </div>-->
+      <h1>WORP</h1>
+      <form action="">
+          <!-- Headings for the form -->
+          <div class="headingsContainer">
+              <h3>Sign in</h3>
+              <p>Sign in with your username and password</p>
+          </div>
+  
+          <!-- Main container for all inputs -->
+          <div class="mainContainer">
+              <!-- Username -->
+              <label for="username">Your username</label>
+              <input type="text" placeholder="Enter Username" name="username" required>
+  
+              <br><br>
+  
+              <!-- Password -->
+              <label for="pswrd">Your password</label>
+              <input type="password" placeholder="Enter Password" name="pswrd" required>
+  
+              <!-- sub container for the checkbox and forgot password link -->
+              <div class="subcontainer">
+                  <label>
+                    <input type="checkbox" checked="checked" name="remember"> Remember me
+                  </label>
+                  <p class="forgotpsd"> <a href="#">Forgot Password?</a></p>
+              </div>
+  
+  
+              <!-- Submit button -->
+              <button type="submit">Login</button>
+  
+              <!-- Sign up link -->
+              <p class="register">Not a member?  <a href="#">Register here!</a></p>
+  
+          </div>
+  
+      </form>
     <script src="loginjavascript.js"></script>
 </body>
 </html>
