--- a/loginhtml.html
+++ b/loginhtml.html
@@ -73,7 +73,7 @@
   
   
               <!-- Submit button -->
-              <button type="submit"><a href="homehtml.html">Login</a></button>
+              <button type="submit"><a href="homehtml.html" style="color: white;">Login</a></button>
   
               <!-- Sign up link -->
               <p class="register">Not a member?  <a href="#">Register here!</a></p>
