added 3 new pages
announcements

--- a/homehtml.html
+++ b/homehtml.html
@@ -10,10 +10,10 @@
         <div class="sidebar">
             <h1>WORP</h1>
             <ul>
-                <li><a href="channelhtml.html">channel</a></li>
+                <li><a href="homepage2.html">Main Page</a></li>
+                <li><a href="channelhtml.html">Channel</a></li>
                 <li><a href="#">Join Channel</a></li>
                 <li><a href="#">Settings</a></li>
-                <li><a href="homepage2.html">homepage2</a></li>
             </ul>
         </div>
         <div class="main-content">
