--- a/announcements.html
+++ b/announcements.html
@@ -3,29 +3,28 @@
 <head>
 	<meta charset="UTF-8">
 	<title>WORP - College Announcements</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="announcements.css">
 </head>
 <body>
 	<header>
 		<h1>WORP - College Announcements</h1>
 		<nav>
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Time Table</a></li>
-				<li><a href="#">Post Announcements</a></li>
+			
 			</ul>
 		</nav>
 	</header>
 	<main>
 		<h2>Latest Announcements</h2>
+		<br>
 		<ul>
 			<li>
-				<h3>CCC Exit Test Phase 2</h3>
+				<h3> => CCC Exit Test Phase 2</h3>
 				<p>Timings - 3:00 pm - 6:00 pm for all departments</p>
 				<small>Posted on: 21 April 2023</small>
 			</li>
+			<br>
 			<li>
-				<h3>Eid Mubarak !!</h3>
+				<h3> => Eid Mubarak !!</h3>
 				<p>Announcement Description</p>
 				<small>Posted on: 22 April 2023</small>
 			</li>
