--- a/homepage2.html
+++ b/homepage2.html
@@ -23,7 +23,7 @@
       <div class="channels">
         <h2>Channels</h2>
         <ul>
-          <li><a href="#">#announcements</a></li>
+          <li><a href="announcements.html">#announcements</a></li>
           <li><a href="#">#general</a></li>
           <li><a href="#">#introductions</a></li>
           <li><a href="#">#random</a></li>
