--- a/homepage2.html
+++ b/homepage2.html
@@ -23,17 +23,8 @@
       <div class="channels">
         <h2>Channels</h2>
         <ul>
-          <li><a href="announcements.html">#announcements</a></li>
-          <li><a href="#">#general</a></li>
-          <li><a href="#">#introductions</a></li>
-          <li><a href="#">#random</a></li>
-          <li><a href="#">#support</a></li>
+          <li><a href="announcements.html">#Announcements</a></li>
         </ul>
-        <div class="options">
-          <button class="join">Join a Channel</button>
-          <button class="create">Create a Channel</button>
-          <button class="create-community">Create a Community Channel</button>
-          <button class="join-community">Join a Community Channel</button>
         </div>
       </div>
     </main>
