--- a/announcements.html
+++ b/announcements.html
@@ -25,14 +25,10 @@
 			<br>
 			<li>
 				<h3> => Eid Mubarak !!</h3>
-				<p>Announcement Description</p>
+				<p>Wishing you all Eid Mubarak on behalf from SRMIST</p>
 				<small>Posted on: 22 April 2023</small>
 			</li>
 		</ul>
 	</main>
-	<footer>
-		<p>&copy; WORP - College Announcements</p>
-	</footer>
-	<script src="script.js"></script>
-</body>
+	</body>
 </html>
