--- a/homehtml.html
+++ b/homehtml.html
@@ -12,6 +12,7 @@
             <ul>
                 <li><a href="homepage2.html">Main Page</a></li>
                 <li><a href="channelhtml.html">Channel</a></li>
+                <li><a href="createchannel.html">Create a Channel</a></li>
                 <li><a href="#">Settings</a></li>
             </ul>
         </div>
