--- a/createchannel.html
+++ b/createchannel.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Project WORP</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="createchannel.css">
 </head>
 <body>
 	<header>
@@ -27,6 +27,6 @@
 				
 	
 	</main>
-	<script src="script.js"></script>
+	<script src="createchannel.js"></script>
 </body>
 </html>
