--- a/createchannel.html
+++ b/createchannel.html
@@ -20,7 +20,7 @@
 				<input type="text" id="channel-name" name="channel-name" required>
                   <br>
 				<label for="channel-icon">Channel Icon:</label>
-				<input type="url" id="channel-icon" name="channel-icon" required>
+				<input type="file" id="channel-icon" name="channel-icon" required>
                   <br>
 				<label for="channel-bg">Channel Background:</label>
 				<input type="color" id="channel-bg" name="channel-bg" value="#505050" required>
