--- a/settings.html
+++ b/settings.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Channel Settings - Project WORP</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="settings.css">
 </head>
 <body>
 	<header>
@@ -31,6 +31,6 @@
 			<button type="submit">Save Changes</button>
 		</form>
 	</main>
-	<script src="script.js"></script>
+	<script src="settings.js"></script>
 </body>
 </html>
