--- a/homehtml.html
+++ b/homehtml.html
@@ -13,7 +13,7 @@
                 <li><a href="homepage2.html">Main Page</a></li>
                 <li><a href="channelhtml.html">Channel</a></li>
                 <li><a href="createchannel.html">Create a Channel</a></li>
-                <li><a href="settings.css">Settings</a></li>
+                <li><a href="settings.html">Settings</a></li>
             </ul>
         </div>
         <div class="main-content">
