--- a/gaming.html
+++ b/gaming.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>WORP Gaming Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="gaming.css">
   </head>
   <body>
     <header>
@@ -22,6 +22,6 @@
     <footer>
       <p>&copy; 2023 WORP. All Rights Reserved.</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="gaming.js"></script>
   </body>
 </html>
