--- a/homepage2.html
+++ b/homepage2.html
@@ -14,7 +14,7 @@
       <nav>
         <ul>
           <li class="active"><a href="#">General</a></li>
-          <li><a href="#">Gaming</a></li>
+          <li><a href="gaming.html">Gaming</a></li>
           <li><a href="#">Technology</a></li>
           <li><a href="#">Music</a></li>
           <li><a href="#">Art</a></li>
