--- a/homepage2.html
+++ b/homepage2.html
@@ -13,17 +13,13 @@
     <main>
       <nav>
         <ul>
-          <li class="active"><a href="#">General</a></li>
+          <li><a href="announcements.html">Announcements</a></li>
           <li><a href="gaming.html">Gaming</a></li>
           <li><a href="#">Technology</a></li>
           <li><a href="#">Music</a></li>
           <li><a href="#">Art</a></li>
         </ul>
       </nav>
-      <div class="channels">
-        <h2>Channels</h2>
-        <ul>
-          <li><a href="announcements.html">#Announcements</a></li>
         </main>
   </body>
 </html>
