--- a/homepage2.html
+++ b/homepage2.html
@@ -15,7 +15,7 @@
         <ul>
           <li><a href="announcements.html">Announcements</a></li>
           <li><a href="gaming.html">Gaming</a></li>
-          <li><a href="#">Technology</a></li>
+          <li><a href="technologypage.html">Technology</a></li>
           <li><a href="#">Music</a></li>
           <li><a href="#">Art</a></li>
         </ul>
