--- a/gaming.html
+++ b/gaming.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8">
     <title>WORP Gaming Page</title>
-    <link rel="stylesheet" href="gaming.css">
+    <link rel="stylesheet" type="text/css" href="gaming.css">
   </head>
   <body>
     <header>
