--- a/loginhtml.html
+++ b/loginhtml.html
@@ -6,44 +6,7 @@
     <link rel="stylesheet" href="logincss.css">
 </head>
 <body>
-    <!--<div class="container">
-        <h1>WORP Login</h1>
-        <form>
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" id="username" placeholder="Enter Username">
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <div class="password-container">
-                    <input type="password" id="password" placeholder="Enter Password">
-                    <span class="show-password" onclick="showPassword()">Show</span>
-                </div>
-            </div>
-            <a href="homehtml.html"><button class="login-btn">Login</button></a>
-            
-        </form>
-    </div>-->
-<!--this is different sectionnnnnnn-->
-<!--    <div class="login-page">
-        <h1>WORP</h1>
-        <div class="form">
-          <form class="register-form">
-            <input type="text" placeholder="name" />
-            <input type="password" placeholder="password" />
-            <input type="text" placeholder="email address"/>
-            <button>create</button>
-            <p class="message">Already registered? <a href="#">Sign In</a></p>
-          </form>
-          <form class="login-form">
-            <input type="text" placeholder="username" />
-            <input type="password" placeholder="password" />
-            <button>login</button>
-            <p class="message">Not registered? <a href="#">Create an account</a></p>
-          </form>
-        </div>
-      </div>-->
-      <h1>WORP</h1>
+    <img src="worplogo.png" alt="WORP Logo">
       <form action="">
           <!-- Headings for the form -->
           <div class="headingsContainer">
