--- a/homepage2.html
+++ b/homepage2.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="worp-logo.png" alt="WORP Logo">
+        <img src="worplogo.png" alt="WORP Logo">
       </div>
     </header>
     <main>
