--- a/loginhtml.html
+++ b/loginhtml.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="logincss.css">
 </head>
 <body>
-    <img src="worplogo.png" alt="WORP Logo">
+    <div class="logo">
+        <img src="worplogo.png" alt="WORP Logo">
+    </div>
+    <br>
       <form action="">
           <!-- Headings for the form -->
           <div class="headingsContainer">
