--- a/homepage2.html
+++ b/homepage2.html
@@ -16,7 +16,7 @@
           <li><a href="announcements.html">Announcements</a></li>
           <li><a href="gaming.html">Gaming</a></li>
           <li><a href="technologypage.html">Technology</a></li>
-          <li><a href="#">Music</a></li>
+          <li><a href="music.html">Music</a></li>
           <li><a href="#">Art</a></li>
         </ul>
       </nav>
