--- a/homehtml.html
+++ b/homehtml.html
@@ -19,7 +19,7 @@
         <div class="main-content">
             <h2>Welcome to WORP</h2>
             <p>Please click on the Google Meet link below to join the meeting:</p>
-            <a href="#" class="google-meet-link">https://meet.google.com/abcd-efgh-ijkl</a>
+            <a href="https://meet.google.com/" class="google-meet-link">Google Meet Webpage</a>
         </div>
     </div>
 </body>
