--- a/settings.html
+++ b/settings.html
@@ -10,10 +10,10 @@
 	</header>
 	<main>
 		<form>
-			<label for="username">Username</label>
+			<label for="username">New Username</label>
 			<input type="text" id="username" name="username">
 
-			<label for="password">Password</label>
+			<label for="password">New Password</label>
 			<input type="password" id="password" name="password">
 
 			<label for="profile-pic">Profile Picture</label>
