--- a/channelhtml.html
+++ b/channelhtml.html
@@ -9,7 +9,7 @@
 </head>
 <body> 
 <div class="create-channel-form">
-  <h3>Create a Channel</h3>
+  <h3>Join a Channel</h3>
   <form>
     <label for="channel-name">Channel Name:</label>
     <input type="text" id="channel-name" name="channel-name" required>
