--- a/homehtml.html
+++ b/homehtml.html
@@ -8,17 +8,24 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <h1>WORP</h1>
+            <div class="logo">
+                <img src="worplogo.png" alt="WORP Logo">
+            </div>
+            <br>
+        
             <ul>
                 <li><a href="homepage2.html">Main Page</a></li>
-                <li><a href="channelhtml.html">Channel</a></li>
+                <br>
+                <li><a href="channelhtml.html">Join a Channel</a></li>
+                <br>
                 <li><a href="createchannel.html">Create a Channel</a></li>
+                <br>
                 <li><a href="settings.html">Settings</a></li>
             </ul>
         </div>
         <div class="main-content">
             <h2>Welcome to WORP</h2>
-            <p>Please click on the Google Meet link below to join the meeting:</p>
+            <p>Please click on the Google Meet link below to create a meeting:</p>
             <a href="https://meet.google.com/" class="google-meet-link">Google Meet Webpage</a>
         </div>
     </div>
