--- a/gaming.html
+++ b/gaming.html
@@ -12,10 +12,10 @@
       <h2>Get ready to explore the world of gaming!</h2>
       <p>Choose a category:</p>
       <ul>
-        <li><a href="#">PC Gaming</a></li>
-        <li><a href="#">Console Gaming</a></li>
-        <li><a href="#">Mobile Gaming</a></li>
-        <li><a href="#">Esports</a></li>
+        <li><a href="https://www.pcgamer.com/">PC Gaming</a></li>
+        <li><a href="https://www.computerhope.com/jargon/c/console.htm#:~:text=2.,are%20all%20examples%20of%20consoles.">Console Gaming</a></li>
+        <li><a href="https://www.applovin.com/glossary/mobile-gaming/">Mobile Gaming</a></li>
+        <li><a href="https://www.esports.com/en">Esports</a></li>
       </ul>
     <script src="gaming.js"></script>
   </body>
