--- a/gaming.html
+++ b/gaming.html
@@ -12,9 +12,9 @@
       <h2>Get ready to explore the world of gaming!</h2>
       <p>Choose a category:</p>
       <ul>
-        <li><a href="https://www.pcgamer.com/">PC Gaming</a></li>
-        <li><a href="https://www.computerhope.com/jargon/c/console.htm#:~:text=2.,are%20all%20examples%20of%20consoles.">Console Gaming</a></li>
-        <li><a href="https://www.applovin.com/glossary/mobile-gaming/">Mobile Gaming</a></li>
+        <li><a href="https://www.metacritic.com/game">PC Gaming</a></li>
+        <li><a href="https://www.gamestheshop.com/">Console Gaming</a></li>
+        <li><a href="https://gamingonphone.com/">Mobile Gaming</a></li>
         <li><a href="https://www.esports.com/en">Esports</a></li>
       </ul>
     <script src="gaming.js"></script>
