--- a/joinchannel.html
+++ b/joinchannel.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Join Channel - WORP</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="joinchannel.css">
 </head>
 <body>
 	<header>
@@ -25,8 +25,5 @@
 			<button type="submit">Upload</button>
 		</form>
 	</main>
-	<footer>
-		<p>&copy; 2023 WORP</p>
-	</footer>
 </body>
 </html>
