--- a/homehtml.html
+++ b/homehtml.html
@@ -16,9 +16,9 @@
             <ul>
                 <li><a href="homepage2.html">Main Page</a></li>
                 <br>
-                <li><a href="channelhtml.html">Join a Channel</a></li>
+                <li><a href="joinchannel.html">Join a Channel</a></li>
                 <br>
-                <li><a href="joinchannel.html">Create a Channel</a></li>
+                <li><a href="channelhtml.html">Create a Channel</a></li>
                 <br>
                 <li><a href="settings.html">Settings</a></li>
             </ul>
