--- a/homehtml.html
+++ b/homehtml.html
@@ -18,7 +18,7 @@
                 <br>
                 <li><a href="joinchannel.html">Join a Channel</a></li>
                 <br>
-                <li><a href="channelhtml.html">Create a Channel</a></li>
+                <li><a href="createchannel.html">Create a Channel</a></li>
                 <br>
                 <li><a href="settings.html">Settings</a></li>
             </ul>
