--- a/joinchannel.html
+++ b/joinchannel.html
@@ -10,20 +10,18 @@
 		<h1>Join Channel</h1>
 	</header>
 	<main>
-		<h2>Sub Channels</h2>
+		<h1>Sub Channels</h1>
+		<br>
 		<ul>
-			<li><a href="#">Channel 1</a></li>
-			<li><a href="#">Channel 2</a></li>
-			<li><a href="#">Channel 3</a></li>
-			<li><a href="#">Channel 4</a></li>
+			<li><a href="#">SEPM - Software Engineering & Project Management</a></li>
+			<br>
+			<li><a href="#">PQT - Probability and Queueing Theory</a></li>
+			<br>
+			<li><a href="#">DAA - Design Analysis and Algorithms</a></li>
+			<br>
+			<li><a href="#">CC - Computer Communications</a></li>
+			<br>
 		</ul>
-		<h2>Sub Channel Name</h2>
-		<p>Upload your assignments and files here:</p>
-		<form>
-			<label for="file">Select File:</label>
-			<input type="file" id="file" name="file">
-			<button type="submit">Upload</button>
-		</form>
 	</main>
 </body>
 </html>
