--- a/createchannel.html
+++ b/createchannel.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<h1>Project WORP</h1>
+		<h1>WORP</h1>
 		<button id="create-channel-btn">Create Channel</button>
 	</header>
 	<main>
