--- a/joinchannel.html
+++ b/joinchannel.html
@@ -7,19 +7,19 @@
 </head>
 <body>
 	<header>
-		<h1>Join Channel</h1>
+		<h1>Join Channels</h1>
 	</header>
 	<main>
-		<h1>Sub Channels</h1>
+		<h2>Classes Channels</h2>
 		<br>
 		<ul>
-			<li><a href="#">SEPM - Software Engineering & Project Management</a></li>
+			<li><a href="">#1 SEPM - Software Engineering & Project Management</a></li>
 			<br>
-			<li><a href="#">PQT - Probability and Queueing Theory</a></li>
+			<li><a href="#">#2 PQT - Probability and Queueing Theory</a></li>
 			<br>
-			<li><a href="#">DAA - Design Analysis and Algorithms</a></li>
+			<li><a href="#">#3 DAA - Design Analysis and Algorithms</a></li>
 			<br>
-			<li><a href="#">CC - Computer Communications</a></li>
+			<li><a href="#">#4 CC - Computer Communications</a></li>
 			<br>
 		</ul>
 	</main>
