--- a/joinchannel.html
+++ b/joinchannel.html
@@ -13,7 +13,7 @@
 		<h2>Classes Channels</h2>
 		<br>
 		<ul>
-			<li><a href="">#1 SEPM - Software Engineering & Project Management</a></li>
+			<li><a href="sepmchannel.html">#1 SEPM - Software Engineering & Project Management</a></li>
 			<br>
 			<li><a href="#">#2 PQT - Probability and Queueing Theory</a></li>
 			<br>
