--- a/joinchannel.html
+++ b/joinchannel.html
@@ -15,9 +15,9 @@
 		<ul>
 			<li><a href="sepmchannel.html">#1 SEPM - Software Engineering & Project Management</a></li>
 			<br>
-			<li><a href="daachannel.html">#2 PQT - Probability and Queueing Theory</a></li>
+			<li><a href="#">#2 PQT - Probability and Queueing Theory</a></li>
 			<br>
-			<li><a href="#">#3 DAA - Design Analysis and Algorithms</a></li>
+			<li><a href="daachannel.html">#3 DAA - Design Analysis and Algorithms</a></li>
 			<br>
 			<li><a href="#">#4 CC - Computer Communications</a></li>
 			<br>
