--- a/daachannel.html
+++ b/daachannel.html
@@ -35,7 +35,7 @@
           </div>
             <ul>
               <br>
-                <li><a href="#">Lab Manual</a></li>
+                <li><a href="https://docs.google.com/document/d/1aL1D4gHL_DhFR_lG_T0j5wI0VHZXaIyf/edit?usp=sharing&ouid=117641011026826620615&rtpof=true&sd=true">Lab Manual</a></li>
                 <br>
             </ul>
                   </section>
