--- a/pqtchannel.html
+++ b/pqtchannel.html
@@ -35,7 +35,7 @@
           </div>
             <ul>
               <br>
-                <li><a href="#">Tutorial Sheet</a></li>
+                <li><a href="https://drive.google.com/file/d/1siJl0HX1qIx3QtQtn8EnBz1FxUb2ZTaf/view?usp=sharing">Tutorial Sheet</a></li>
                 <br>
               </ul>
                   </section>
