--- a/sepmchannel.html
+++ b/sepmchannel.html
@@ -35,11 +35,11 @@
           </div>
             <ul>
               <br>
-                <li><a href="#">Unit 1</a></li>
+                <li><a href="https://drive.google.com/file/d/15_Hvjo9lGKZN6k_6heKbuN2X3k6OijST/view?usp=sharing">Unit 1</a></li>
                 <br>
-                <li><a href="#">Unit 2</a></li>
+                <li><a href="https://drive.google.com/file/d/17trKxgfG6x3LGl_8mfJxym6auiZLHTvc/view?usp=sharing">Unit 2</a></li>
                 <br>
-                <li><a href="#">Unit 3</a></li>
+                <li><a href="https://docs.google.com/presentation/d/1G6xV1_RM7CJBhV_LxYjNE4oZpbmxfAJp/edit?usp=sharing&ouid=117641011026826620615&rtpof=true&sd=true">Unit 3</a></li>
                 <br>
               </ul>
                   </section>
