--- a/announcements.html
+++ b/announcements.html
@@ -24,9 +24,21 @@
 			</li>
 			<br>
 			<li>
-				<h3> => Eid Mubarak !!</h3>
-				<p>Wishing you all Eid Mubarak on behalf from SRMIST</p>
-				<small>Posted on: 22 April 2023</small>
+				<h3> => DAA Model Lab for Batch 2</h3>
+				<p>Model Practical in DAA Elab for batch 2 is scheduled on 24th April i.e Monday.</p>
+				<small>Posted on: 21 April 2023</small>
+			</li>
+			<br>
+			<li>
+				<h3> => OS Model Lab</h3>
+				<p>Model Practical for OS is scheduled on 25th April i.e Tuesday.</p>
+				<small>Posted on: 21 April 2023</small>
+			</li>
+			<br>
+			<li>
+				<h3> => SEPM Lab</h3>
+				<p>Project Review for SEPM is will be there in the upcoming week for both the batches on their respective day order.</p>
+				<small>Posted on: 24 April 2023</small>
 			</li>
 		</ul>
 	</main>
