--- a/announcements.html
+++ b/announcements.html
@@ -30,6 +30,12 @@
 			</li>
 			<br>
 			<li>
+				<h3> => APP Model Lab for Batch 1</h3>
+				<p>Model Practical for APP lab for batch 2 is scheduled on 24th April i.e Monday.</p>
+				<small>Posted on: 21 April 2023</small>
+			</li>
+			<br>
+			<li>
 				<h3> => OS Model Lab</h3>
 				<p>Model Practical for OS is scheduled on 25th April i.e Tuesday.</p>
 				<small>Posted on: 21 April 2023</small>
