--- a/homepage2.html
+++ b/homepage2.html
@@ -17,6 +17,7 @@
           <li><a href="gaming.html">Gaming</a></li>
           <li><a href="technologypage.html">Technology</a></li>
           <li><a href="music.html">Music</a></li>
+          <li><a href="timetable.html">Time Table</a></li>
         </ul>
       </nav>
         </main>
