--- a/music.html
+++ b/music.html
@@ -19,11 +19,11 @@
 		</ul>
 		<br>
 		<br>
-		<h2>Hollywood Music</h2>
+		<h2>Gaurang's Playlist</h2>
 		<ul>
 			<li><a href="https://open.spotify.com/playlist/1XRpQCC3bpMPTme6ihAQ8e?si=37dc1da6520d46a1" target="_blank">HYPE</a></li>
 			<br>
-			<li><a href="https://open.spotify.com/playlist/2eTPGaRQhtOKgZTaNw6SNU?si=fa8e2c988fe44d75" target="_blank">Cool Rising</a></li>
+			<li><a href="https://open.spotify.com/playlist/2eTPGaRQhtOKgZTaNw6SNU?si=fa8e2c988fe44d75" target="_blank">Cool Bollywood</a></li>
 		</ul>
 	</main>
 	</body>
