--- a/timetable.html
+++ b/timetable.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>WORP Music Page</title>
-	<link rel="stylesheet" href="music.css">
+	<title>Time Table</title>
+	<link rel="stylesheet" href="timetable.css">
 </head>
 <body>
 	<header>
 		<h1>WORP Music Page</h1>
 	</header>
 	<main>
-		<h2>Bollywood Music</h2>
+		<h2>Batches Time Table</h2>
 		<ul>
-			<li><a href="https://open.spotify.com/playlist/4nNVfQ9eWidZXkBKZN5li4" target="_blank">Bollywood Top 50</a></li>
+			<li><a href="https://drive.google.com/file/d/17Cfl4sgNu0lYlvGOIqhsXbxSFm3fZ5s_/view?usp=sharing" target="_blank">Batch 1</a></li>
 			<br>
-			<li><a href="https://open.spotify.com/playlist/0S7boBN3rPfo2F1DXX5U7k" target="_blank">Bollywood Party</a></li>
-			<br>
-			<li><a href="https://open.spotify.com/playlist/0WVu57JukbfCKCswdreWCQ" target="_blank">Tamil Party Songs</a></li>
+			<li><a href="https://drive.google.com/file/d/1nlVCE0wl8QRjlwU0xGB04CzaUrqoOOOW/view?usp=sharing" target="_blank">Batch 2</a></li>
 		</ul>
 		<br>
 		<br>
-		<h2>Hollywood Music</h2>
+		<h2>AA1 Time Table</h2>
 		<ul>
-			<li><a href="https://open.spotify.com/playlist/1XRpQCC3bpMPTme6ihAQ8e?si=37dc1da6520d46a1" target="_blank">HYPE</a></li>
+			<li><a href="https://drive.google.com/file/d/1xzK4dn04cx5OHVrCH5va9cxu1DqZNqLp/view?usp=sharing" target="_blank">AA1 Classes</Table></a></li>
 			<br>
-			<li><a href="https://open.spotify.com/playlist/2eTPGaRQhtOKgZTaNw6SNU?si=fa8e2c988fe44d75" target="_blank">Cool Rising</a></li>
 		</ul>
 	</main>
 	</body>
