--- a/homehtml.html
+++ b/homehtml.html
@@ -21,6 +21,8 @@
                 <li><a href="createchannel.html">Create a Channel</a></li>
                 <br>
                 <li><a href="settings.html">Settings</a></li>
+                <br>
+                <li><a href="contactus.html">Settings</a></li>
             </ul>
         </div>
         <div class="main-content">
