--- a/contactus.html
+++ b/contactus.html
@@ -27,6 +27,6 @@
         </section>
     </main>
 
-    <script src="script.js"></script>
+    <script src="contactus.js"></script>
 </body>
 </html>
