--- a/homehtml.html
+++ b/homehtml.html
@@ -22,7 +22,7 @@
                 <br>
                 <li><a href="settings.html">Settings</a></li>
                 <br>
-                <li><a href="contactus.html">Settings</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
             </ul>
         </div>
         <div class="main-content">
