--- a/homehtml.html
+++ b/homehtml.html
@@ -20,6 +20,8 @@
                 <br>
                 <li><a href="createchannel.html">Create a Channel</a></li>
                 <br>
+                <li><a href="createchannel.html">Pooling</a></li>
+                <br>
                 <li><a href="settings.html">Settings</a></li>
                 <br>
                 <li><a href="contactus.html">Contact Us</a></li>
