--- a/homehtml.html
+++ b/homehtml.html
@@ -20,11 +20,11 @@
                 <br>
                 <li><a href="createchannel.html">Create a Channel</a></li>
                 <br>
-                <li><a href="createchannel.html">Pooling</a></li>
+                <li><a href="pool.html">Polling</a></li>
                 <br>
                 <li><a href="settings.html">Settings</a></li>
                 <br>
-                <li><a href="contactus.html">Contact Us</a></li>
+                <li><a href="https://forms.gle/KgA38BJZerGgPZQU7">Feedback</a></li>
             </ul>
         </div>
         <div class="main-content">
