--- a/pool.html
+++ b/pool.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Dark Polling Page</title>
+  <title>Lab Polling Page</title>
   <link rel="stylesheet" href="pool.css">
 </head>
 <body>
