--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
               <input type="password" placeholder="Enter Password" name="password" required>
               
               <button type="submit" style = "color: white;">Login</button>
-  
-          </div>
-  
+
+                <h3>Not a member ?</h3>  
+                <h5><a href="register.html">Register Here</a></h5>
       </form>
 </body>
 </html>
