--- a/register.html
+++ b/register.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="container">
-    <form id="registration-form" method="post">
+    <form id="registration-form" action="registerdb.php">
       <h1>Register</h1>
       <div class="form-group">
         <label for="username">Username</label>
@@ -15,11 +15,11 @@
       </div>
       <div class="form-group">
         <label for="firstName">First Name</label>
-        <input type="text" id="firstName" name="firstName" required>
+        <input type="text" id="firstName" name="firstname" required>
       </div>
       <div class="form-group">
         <label for="lastName">Last Name</label>
-        <input type="text" id="lastName" name="lastName" required>
+        <input type="text" id="lastName" name="lastname" required>
       </div>
       <div class="form-group">
         <label for="password">Password</label>
@@ -30,12 +30,15 @@
         <input type="date" id="dob" name="dob" required>
       </div>
       <div class="form-group">
+        <label for="phone_number">Phone Number</label>
+        <input type="int" id="phone_number" name="phone" required>
+      </div>
+      <div class="form-group">
         <label for="email">Email Address</label>
         <input type="email" id="email" name="email" required>
       </div>
       <button type="submit">Register</button>
     </form>
   </div>
-  <script src="script.js"></script>
 </body>
 </html>
